feat: Enhanced RAG URL functionality and published all packages
- Added comprehensive logging to RAG URL fetching and context retrieval
- Improved error handling and user feedback in RAG demo
- Fixed Vue 2/3 compatibility across all packages
- Updated all package versions and published to npm
- Added RAG URL testing guide and test utilities
- Fixed TypeScript build errors across all packages
- Enhanced demo with better UX and debugging capabilities

Published packages:
- @aivue/core@1.3.13
- @aivue/chatbot@2.5.5
- @aivue/smartform@1.3.6
- @aivue/smart-notify@1.0.3
- @aivue/smart-datatable@2.0.3
- @aivue/analytics@1.0.3
- @aivue/autosuggest@1.3.6
- @aivue/predictive-input@1.0.5
- @aivue/image-caption@1.0.3
- @aivue/360-spin@2.0.1
- @aivue/voice-actions@1.0.3
- @aivue/emotion-ui@1.0.4
- @aivue/doc-intelligence@1.0.4
- @aivue/chatbot-storage@1.0.1
- @aivue/ai-360-generator@1.0.1

--- a/packages/analytics/package.json
+++ b/packages/analytics/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@aivue/analytics",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "AI-powered analytics and insights for Vue.js applications",
   "author": "reachbrt",
   "license": "MIT",
@@ -46,7 +46,7 @@
     "url": "https://github.com/reachbrt/vueai/issues"
   },
   "peerDependencies": {
-    "vue": "^3.0.0"
+    "vue": "^2.6.0 || ^3.0.0"
   },
   "dependencies": {
     "@aivue/core": "^1.2.7",
